# babocar-control-panel-firmware

./: .cproject  .gitignore  .project  CMakeLists.txt  LinkerScript.ld  README.md  car Debug.cfg  control-panel Debug.cfg  control-panel Debug.launch  pinout.txt
doc/draw_io_models/: uns_msg_structure.xml  uns_tasks_queues.xml  uns_track_state_machine.xml
inc/: ControlData.hpp  DetectedLines.hpp  DistancesData.hpp  Environment.hpp  Graph.hpp  Grid.hpp  LabyrinthGraph.hpp  LineController.hpp  LinePattern.hpp  ProgramState.hpp  cfg_board.h  cfg_board.hpp  cfg_car.hpp  cfg_os.hpp  cfg_track.hpp  globals.hpp  queue_sizes.h
inc/uns/: BitArray.hpp  BitContainer.hpp  BitGrid.hpp  CarProps.hpp  ControlProps.hpp  Environment.hpp  Graph.hpp  Grid.hpp  LabyrinthGraph.hpp  LedDataAnalyser.hpp  LedPanelHandler.hpp  Line.hpp  (+11 more)
include/: DebugMessage.hpp  DetectedLines.hpp  Distances.hpp  DistancesData.hpp  Graph.hpp  LabyrinthGraph.hpp  LabyrinthGraphBuilder.hpp  LabyrinthNavigator.hpp  LabyrinthRoute.hpp  LaneChangeManeuver.hpp  LineController.hpp  LinePattern.hpp  OvertakeManeuver.hpp  ProgramState.hpp  RaceTrackController.hpp  RaceTrackInfo.hpp  TestManeuver.hpp  TrackSegments.hpp  TrackSpeeds.hpp  TurnAroundManeuver.hpp  cfg_board.h  cfg_board.hpp  cfg_car.hpp  cfg_micro.hpp  cfg_system.hpp  cfg_track.hpp  debug_protocol.hpp  globals.hpp  system_init.h  track.hpp  track_utils.hpp
src/: ControlTask.cpp  DebugMessage.cpp  DebugTask.cpp  DistSensorTask.cpp  GyroTask.cpp  LabyrinthGraph.cpp  LabyrinthGraphBuilder.cpp  LabyrinthNavigator.cpp  LabyrinthRoute.cpp  LaneChangeManeuver.cpp  LineDetectTask.cpp  LinePattern.cpp  OvertakeManeuver.cpp  ProgLabyrinthTask.cpp  ProgRaceTrackTask.cpp  ProgramState.cpp  RaceTrackController.cpp  RaceTrackInfo.cpp  SensorTask.cpp  SetupTask.cpp  StartupTask.cpp  TestManeuver.cpp  TrackSegments.cpp  Trajectory.cpp  TurnAroundManeuver.cpp  cfg_board.cpp  cfg_os.cpp  debug_protocol.cpp  globals.cpp  interrupts.cpp  queue_sizes.cpp  race_labyrinth.cpp  race_track.cpp  system_init.cpp  test_labyrinth.cpp  test_track.cpp  track.cpp  track_utils.cpp
test/: CMakeLists.txt  build.sh
test/resources/: labyrinth_complicated.drawio
test/src/: LabyrinthNavigatorTest.hpp  route.cpp  route.hpp  utest_debugmessage.cpp  utest_labyrinthGraph.cpp  utest_labyrinthNavigator_race_labyrinth.cpp  utest_labyrinthNavigator_test_labyrinth.cpp  utest_labyrinthRoute.cpp  utest_laneChangeManeuver.cpp  utest_overtakeManeuver.cpp  utest_raceTrackController.cpp  utest_race_labyrinth.cpp  utest_test_labyrinth.cpp  utest_test_raceTrackController.cpp  utest_test_raceTrackInfo.cpp  utest_turnAroundManeuver.cpp  utest_vec.cpp
(+114 files in other folders)
